--- a/views/game.ejs
+++ b/views/game.ejs
@@ -15,7 +15,7 @@
             </div>
             <div>
                 <div>Time</div>
-                <div id = "time">0</div>
+                <div id = "time">120</div>
             </div>
             <div>
                 <div>Speed</div>
@@ -38,7 +38,7 @@
     <p> Accuracy : <span id="resultAccuracy">100%</span></p>
     <p>Time : <span id="resultTime">0</span></p>
     <p>Speed : <span id="resultSpeed">0</span></p>
-    <a href = '/' id = "button">New Game</a>
+    <a href = '/?name=<%=locals.name%>&uID=<%= locals.uID%>' id = "button">New Game</a>
 </section>
 
     <script src = "/js/game.js"></script>
