--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -91,3 +91,86 @@ body {
 option{
     color: black;
 }
+
+  #myModal{
+    display: none;
+  }
+
+.modal-content {
+  margin :0.5rem auto;
+  border: 2px solid white;
+  border-radius: 10px;
+  width: 90%;
+  max-width: 400px;
+  background: #2c3e50;
+  background: -webkit-linear-gradient(
+    to right,
+    #4ca1af,
+    #2c3e50
+  );
+  background: linear-gradient(
+    to right,
+    #4ca1af,
+    #2c3e50
+  );
+  padding: 1rem;
+}
+
+.modal-content p {
+  font-size: 1.2rem;
+}
+
+.modal-content input[type="text"] {
+  font-size: 1rem;
+  font-weight: 600;
+  padding: 0.5rem;
+  border: 1px solid #2193b0;
+  border-radius: 5px;
+  background-color: transparent;
+  color: white;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.modal-content button {
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 0.5rem;
+  border: none;
+  border-radius: 5px;
+  background-color: #2193b0;
+  color: white;
+  cursor: pointer;
+  width: 100%;
+}
+
+.modal-content button:hover {
+  background-color: #176974;
+}
+
+.modal-content button:focus {
+  outline: none;
+}
+
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 9999;
+}
+
+#hi{
+  position: absolute;
+  right: 2rem;
+  top : 1.5rem;
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+}
